[package]
name = "typebeat"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "typebeat-dot-xyz"
path = "www/typebeat.xyz/main.rs"
required-features = ["netlify"]

[profile.dev]
opt-level = 2
overflow-checks = false

[dependencies]
crossbeam = "0.8"
default-boxed = "0.1"
directories = "3.0"
futures = "0.3"
libm = "0.2.1"
rfd = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FIXME(https://github.com/ExPixel/miniaudio-rs/pull/73)
# FIXME(https://github.com/ExPixel/miniaudio-rs/pull/74)
[dependencies.miniaudio]
git = "https://github.com/kofigumbs/miniaudio-rs"
rev = "772b8e0"
features = ["bindgen"]

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "next" }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
lazy_static = "1.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
netlify = []
