[package]
name = "typebeat"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["www/typebeat.xyz"]

[profile.dev]
opt-level = 2
overflow-checks = false

[dependencies]
crossbeam = "0.8"
default-boxed = "0.1"
lazy_static = "1.4"
libm = "0.2"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

# FIXME(https://github.com/ExPixel/miniaudio-rs/pull/73)
# FIXME(https://github.com/ExPixel/miniaudio-rs/pull/74)
[dependencies.miniaudio]
git = "https://github.com/kofigumbs/miniaudio-rs"
rev = "772b8e0"
features = ["bindgen"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "3.0"
futures = "0.3"
rfd = "0.4"
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all"] }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "next" }

[features]
custom-protocol = ["tauri/custom-protocol"]
