[package]
name = "typebeat-tauri"
description = ""
version = "0.1.0"
edition = "2018"

[[bin]]
name = "typebeat-tauri"
path = "main.rs"

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "next" }

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all"] }
typebeat = { path = ".." }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
